--- a/Code/WebServer/Config/config.json
+++ b/Code/WebServer/Config/config.json
@@ -1,1 +1,1 @@
-{"limite_arrosage": "10", "jours_avant_arrosage": "2"}
+{"limite_arrosage": "10", "jours_avant_arrosage": "2", "temps_arrosage": "30"}
